<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_button_variant"
    android:padding="8dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/users"
        android:textSize="16sp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/iv_delete"
        app:layout_constraintEnd_toStartOf="@id/iv_admin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_delete"
        android:contentDescription="@string/delete_context_menu_option" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/iv_admin"

        app:layout_constraintEnd_toStartOf="@id/iv_confirm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_security"
        android:tint="@android:color/holo_orange_light"
        android:contentDescription="@string/admin" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/iv_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_done"
        android:tint="@color/material_green_700"
        android:contentDescription="@string/confirm" />



</androidx.constraintlayout.widget.ConstraintLayout>