<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.UserProfileActivity"
        android:padding="16dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/iv_user"
            android:src="@drawable/default_user_icon"
            android:scaleType="centerCrop"
            android:contentDescription="@string/users" />


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_user"
            app:layout_constraintEnd_toEndOf="@id/iv_user"
            app:srcCompat="@drawable/circle_button"
            android:contentDescription="@string/border" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:padding="8dp"
            android:id="@+id/iv_add_image"
            app:layout_constraintBottom_toBottomOf="@id/iv_user"
            app:layout_constraintEnd_toEndOf="@id/iv_user"
            app:srcCompat="@drawable/ic_camera"
            android:tint="@android:color/white"
            android:contentDescription="@string/change_profile_pic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_user"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:id="@+id/tv_name"
            android:text="@string/user_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/et_name"
            android:inputType="text"
            android:labelFor="@id/iv_user"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_string"
            android:id="@+id/b_return"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonThemeSecondary"
            app:layout_constraintVertical_bias="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/b_update"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ButtonTheme"
            app:layout_constraintVertical_bias="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_lost_connection"
            android:gravity="center"
            android:background="@color/material_green_50"
            android:elevation="17dp"
            android:textSize="16sp"
            android:text="lost connection"/>
</FrameLayout>
</layout>

