<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="true"
        android:padding="16dp" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                android:id="@+id/tv_task_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_task_name"
                app:layout_constraintTop_toBottomOf="@id/tv_task_name"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"
                android:inputType="text"
                android:hint="@string/task_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:id="@+id/tv_description"
                app:layout_constraintTop_toBottomOf="@id/et_task_name"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_description"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                app:layout_constraintStart_toStartOf="parent"
                android:inputType="text"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/priority"
                android:id="@+id/tv_priority"
                app:layout_constraintTop_toBottomOf="@id/et_description"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_priority"
                app:layout_constraintStart_toEndOf="@id/tv_priority"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/background_spinner"
                android:id="@+id/linear_sp_priority"
                app:layout_constraintHorizontal_bias="1">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_priority"

                    android:textSize="16sp"

                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/estate"
                android:id="@+id/tv_estate"
                app:layout_constraintTop_toBottomOf="@id/linear_sp_priority"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_estate"
                app:layout_constraintStart_toEndOf="@id/tv_estate"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/background_spinner"
                android:id="@+id/linear_sp_estate"
                app:layout_constraintHorizontal_bias="1">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sp_estate"
                android:textSize="16sp"/>
            </LinearLayout>


            <Button
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_task"
                android:id="@+id/b_delete_task"
                app:layout_constraintTop_toBottomOf="@id/linear_sp_estate"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/ButtonThemeSecondary" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/b_return"
                app:layout_constraintTop_toBottomOf="@id/b_delete_task"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/ButtonThemeSecondary"
                app:layout_constraintVertical_bias="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:id="@+id/b_update"
                style="@style/ButtonTheme"
                app:layout_constraintTop_toBottomOf="@id/b_delete_task"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
